# librespot-web

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: error.rs  json_result.rs  lib.rs  server.rs
api/static/: index.html  script.js  style.css
api/static/debug/: index.html
connect/src/: spirc.rs
src/: api_server.rs  lib.rs  main.rs
