[package]
name = "librespot-api-server"
version = "0.5.0-dev"
rust-version = "1.61"
authors = ["Adam Anderson <adaand00@gmail.com>"]
description = "Web API server for external control"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2021"

[dependencies]
serde = "1.0.190"
serde_json = "1.0.107"
serde_repr = "0.1.0"
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "parking_lot", "process", "rt-multi-thread"] }
tokio-util = "0.7.10"
warp = "0.3.6"
log = "0.4"
thiserror = "1"
parking_lot = { version = "0.12", features = ["deadlock_detection", "serde"] }
futures-util = { version = "0.3", default_features = false }
bytes = "1.5"
static_dir = "0.2.0"

[dependencies.librespot-core]
path = "../core"
version = "0.5.0-dev"

[dependencies.librespot-playback]
path = "../playback"
version = "0.5.0-dev"

[dependencies.librespot-protocol]
path = "../protocol"
version = "0.5.0-dev"

[dependencies.librespot-connect]
path = "../connect"
version = "0.5.0-dev"

[dependencies.librespot-metadata]
path = "../metadata"
version = "0.5.0-dev"